--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a>from <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h4>HAII MABBYYY</h4>
-        <h1>Will You Be My Valentine?</h1>
+        <h1>Can I be your Valentine?</h1>
         <div class="buttons">
             <a href="yes.html">Yes</a>
             <a href="#" id="move-randoms">No</a>
